Fix overflow

--- a/app/assets/stylesheets/archives.scss
+++ b/app/assets/stylesheets/archives.scss
@@ -150,6 +150,7 @@ body {
 
 html.project2055 {
     background-color: white;
+    overflow-x: hidden;
 }
 
 html.project2055 > body {
